testsuite/tests/contrib/lkt_semantic/dot_call_invalid/test.out
Resolving test.lkt
==================
Id   <RefId "Int" test.lkt:3:9-3:12>
     references <StructDecl prelude: "Int">

Expr <NumLit test.lkt:3:15-3:16>
     has type <StructDecl prelude: "Int">

Id   <RefId "Int" test.lkt:4:18-4:21>
     references <StructDecl prelude: "Int">

Id   <RefId "a" test.lkt:4:24-4:25>
     references <ValDecl "a" test.lkt:3:1-3:16>

Expr <RefId "a" test.lkt:4:24-4:25>
     has type <StructDecl prelude: "Int">

test.lkt:4:26: error: Cannot find entity `plus` in this scope
3 | @invalid val b : Int = a.plus(2)
  |                          ^^^^   

Expr <CallExpr test.lkt:4:24-4:33>
     has type <StructDecl prelude: "Int">

