testsuite/tests/contrib/lkt_semantic/dot_call_invalid/test.lkt
# Regression test for semantic failure over dotted names

val a: Int = 1
@invalid val b: Int = a.plus(2)
